syntax = "proto3";

package miner;

service MinerProxy{
    rpc GetMineCtx(MineCtxRequest) returns (MineCtxResponse) {};
    rpc Mined(MinedBlockRequest) returns (MinedBlockResponse) {}
}

message MineCtxRequest{
    uint32 algo=1;
}

message MineCtxResponse{
    MineCtx mine_ctx=1;
}

message MineCtx{
    bytes header=1;
    bytes target=3;
    uint32 algo=4;
}

message MinedBlockRequest{
    MineCtx mine_ctx=1;
    uint64 nonce=2;
    bytes solution=3;
}

message MinedBlockResponse{
    bool accept=1;
}